--- a/style.css
+++ b/style.css
@@ -125,6 +125,10 @@ a:active {
     top: 7rem; /* parfaitement aligné sous navbar */
     align-self: flex-start;
 
+    display: flex;
+    flex-direction: column;
+    gap: 0.6rem;   /* espacement maîtrisé ici */
+
     font-family: 'Outfit', sans-serif;
     font-weight: 900;
     font-size: 1rem;
@@ -133,7 +137,7 @@ a:active {
 
 .photo-menu a {
     display: block;
-    margin-bottom: 1.2rem;
+    margin-bottom: 0rem;
 }
 
 .photo-menu a:hover {
