--- a/style.css
+++ b/style.css
@@ -244,3 +244,27 @@ a:active {
     opacity: 0.8;
     transform: translateY(-2px);
 }
+
+@media (max-width: 900px) {
+
+    .photo-container {
+        flex-direction: column;
+    }
+
+    .photo-menu {
+        position: static;
+        flex-direction: row;
+        gap: 2rem;
+        margin-bottom: 2rem;
+    }
+
+    .photo-grid {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
+
+    .hero-index {
+        height: 60vh;
+    }
+}
+
